<resources>
    <string name="app_name">Lesson</string>
    <string name="lekcje">LEKCJE</string>
    <string name="testy">TESTY</string>
    <string name="publikacja">PUBLIKACJA TESTÓW</string>
    <string name="opis1">1. Pierwszy Oscar wręczony został w roku 1929. Podczas ceremonii rozdania nagród uhonorowano twórców filmów, które powstały w 1927 oraz 1928 roku.</string>
    <string name="opis2">2. Pierwsze rozdanie Oscarów, które odbyło się w 1929 roku, było najkrótszą ceremonią rozdania tej nagrody w historii. Część, która poświęcona była rozdaniu nagród, trwała jedynie 15 minut. Najdłuższą ceremonią w historii była natomiast gala, która odbyła się w 2002 roku, trwała ona 4 godziny oraz 23 minuty.</string>
    <string name="opis3">3. Najkrótszym występem nagrodzonym Oscarem jest rola Judi Dench w filmie \"Zakochany Szekspir\". Dench nominowana wówczas w kategorii Najlepsza Aktorka Drugoplanowa, pojawiła się w filmie na niecałe 8 minut. Mężczyzną, który ma na swoim koncie najkrótszy występ nagrodzony Oscarem jest natomiast Anthony Hopkins, który wcielając się w rolę Hannibala Lectera w filmie \"Milczenie Owiec\" na ekranie pojawił się przez 16 minut. Aktor zdobył wówczas statuetkę dla Najlepszego Aktora Pierwszoplanowego.</string>
    <string name="opis4">4. Najkrótszą kwestią wypowiedzianą w filmie przez zdobywczynię Oscara poszczycić się może Patty Duke. Za rolę Hellen Keller w filmie \"Cudotwórczyni\" zdobyła Oscara dla najlepszej aktorki drugoplanowej. W filmie Patty Duke mówi jedno słowo - \"woda\".</string>
    <string name="opis6">5. Choć najmłodszą laureatką Oscara jest Tatum O’Neal, która w wieku 10 lat za rolę w filmie \"Papierowy Księżyc\" zdobyła statuetkę, w historii Oscarów był ktoś jeszcze młodszy. W wieku 6 lat, Shirley Temple zdobyła nagrodę specjalną dla najmłodszych aktorów. Nie była ona jednak pełnoprawnym Oscarem - statuetka była bowiem dużo mniejsza niż ta klasyczna.</string>
    <string name="opis7">6. Najstarszym laureatem Oscara jest Christopher Plummer, który w wieku 82 lat odebrał statuetkę za film \"Debiutanci\".</string>
    <string name="opis8">7. Jedynym filmem animowanym, który dostał nominację w kategorii Najlepszy Film jest \"Piękna i bestia\" z 1991 roku.</string>
    <string name="opis5">8. Tylko trzy filmy w historii zdobyły Oscara w kategoriach Najlepszy Film i Najlepsza Piosenka jednocześnie. Były to filmy \"Titanic\", \"Gigi\" oraz \"Idąc moją drogą\".</string>
    <string name="opis9">9. Najdłuższym filmem, który zdobył Oscara w kategorii Najlepszy Film jest \"Przeminęło z wiatrem\" z 1939 roku. Trwa on aż 234 minuty. Najkrótszym jest natomiast film \"Marty\", który zwyciężył w tej samej kategorii w roku 1955. Trwa 92 minut.</string>
    <string name="opis10">10. Filmem, który najdłużej musiał czekać na Oscara jest film \"Światła rampy\" Charlie Chaplina. Choć wyprodukowany został on w roku 1952, ze względu na regulamin Akademii o nominację ubiegać się mógł dopiero po swojej premierze w Los Angeles. Na Oscara w kategorii Najlepsza Muzyka czekać musiał aż 20 lat.</string>
    <string name="zrodlo1">źródło: www.rp.pl</string>
    <string name="les1">1</string>
    <string name="les2">2</string>
    <string name="les3">3</string>
    <string name="pol1">W historii Oscarów nasi rodacy zdobyli 10 statuetek i prawie 30 nominacji. Żaden rok nie był dla nas tak udany, jak 2015 - otrzymaliśmy aż pięć nominacji, w tym cztery dla polskich filmów, co jest dowodem na to, że nasze kino jest na świecie coraz bardziej zauważalne. Statuetkę odebrała ostatecznie tylko \"Ida\", ale raczej nie mamy prawa narzekać.</string>
    <string name="pol2">Pierwszym Polakiem, który zdobył Oscara, był Leopold Stokowski, nagrodzony w 1942 roku za muzykę do filmu \"Fantazja\" Walta Disneya. Ponad dziesięć lat później, w 1953 roku, również za muzykę, odebrał Bronisław Kaper, pracujący przy \"Lili\" Charlesa Waltersa.</string>
    <string name="pol3">Na kolejny sukces trzeba było czekać trzy dekady. W 1983 roku Zbigniew Rybczyński otrzymał pierwszego Oscara dla polskiego filmu za krótkometrażową animację \"Tango\".</string>
    <string name="pol4">Do lat 90. nie mieliśmy wiele szczęścia. Otrzymywaliśmy wprawdzie nominacje, ale największe nazwiska naszego filmu opuszczały gale bez statuetek.</string>
    <string name="pol5">Dwa Oscary zdobył polski operator Janusz Kamiński. Dwukrotnie doceniono go za współpracę ze Stevenem Spielbergiem: w 1994 za zdjęcia do \"Listy Schindlera\" , w 1999 do \"Szeregowca Ryana\".</string>
    <string name="pol6">W 2000 roku nagrodę za całokształt twórczości otrzymał Andrzej Wajda. Kto wie, czy nie była to największa nagroda dla polskiego kina.</string>
    <string name="pol7">W ostatnich piętnastu latach Polakom udało się zdobyć trzy Oscary. Najważniejszym z nich jest statuetka dla Romana Polańskiego za reżyserię filmu \"Pianista\" w 2003 roku. Film otrzymał również dwie inne statuetki - za scenariusz i główną rolę męską.</string>
    <string name="pol8">Do ekskluzywnego grona laureatów Nagrody Akademii dołączył też Jan A.P. Kaczmarek za muzykę do filmu \"Marzyciel\" oraz twórcy krótkiej polsko-brytyjskiej animacji \"Piotruś i Wilk\". (2005)</string>
    <string name="pol9">W zeszłym roku o statuetkę za najlepszy film nieanglojęzyczny powalczył film nagrodzonego już za „Idę” Pawła Pawlikowskiego  - „Zimna Wojna”. Przegrał jednak z nierównym sobie rywalem – meksykańsko-amerykańskim filmem „Roma” Alfonso Cuaróna. Mimo tego piosenka „Dwa serduszka”, śpiewana przez Joannę Kulig zostanie zapamiętana w historii kina, nie tylko tej polskiej.</string>
    <string name="zrodlo2">źródło: www.onet.pl</string>
    <string name="rek1">Filmami, które zdobyły najwięcej Oscarów są filmy \"Ben Hur\" (1959), \"Władca Pierścieni: Powrót Króla\" (2003) i \"Titanic\" (1997). Każdy z nich otrzymał aż 11 statuetek.</string>
    <string name="rek2">Francis Ford Coppola jest jedyną osobą, która w ciągu jednego roku otrzymała aż 5 nominacji. W roku 1974 otrzymał nominację w kategorii Najlepszy Film jako producent \"Ojca chrzestnego II"\ i \"Rozmowy"\, w kategoriach Najlepsza Reżyseria i Najlepszy Scenariusz Adaptowany za \"Ojca chrzestnego II"\ oraz Najlepszy Scenariusz Oryginalny za \"Rozmowę"\.</string>
    <string name="rek3">Dzięki liczbie aktorów, którzy otrzymali nagrody grając w wyreżyserowanych przez niego filmach, rekordzistą jest William Wyler. Aktorzy i aktorki zdobyli w jego produkcjach 34 nominacje oraz 14 statuetek.</string>
    <string name="rek4">Filmem nieanglojęzycznym, który nominowany był w rekordowej liczbie kategorii był film \"Przyczajony tygrys, ukryty smok\" (2000). Otrzymał on 10 nominacji oraz 4 statuetki.</string>
    <string name="rek5">W kategorii Najlepszy Aktor, dzięki swoim 3 nagrodom oraz 12 nominacjom, prowadzi Jack Nicholson.</string>
    <string name="rek6">W kategorii Najlepsza Aktorka najczęściej nominowana była Meryl Streep, która zdobyła 2 Oscary i otrzymała 16 nominacji. Drugą aktorką-rekordzistką jest Katharine Hepburn, która poszczycić się może 4 statuetkami oraz 12 nominacjami w kategorii Najlepsza Aktorka Pierwszoplanowa.</string>
    <string name="rek7">Aktorki najczęściej nominowane rok po roku to Bette Davis (1938-1942) oraz Greer Garson (1941-1945). Wyróżniane były one przez pięć lat z rzędu. Aktorami nominowanymi do Oscara rekordowe cztery razy pod rząd są Marlon Brando (1951-54) oraz Al Pacino (1972-75).</string>
    <string name="rek8">Rekord pod względem otrzymanych Oscarów ustanowił Walt Disney. Zdobył on w sumie aż 26 statuetek oraz 64 nominacje.</string>
    <string name="rek9">Jedynie trzy filmy w historii zdobyły pokera, czyli zwyciężyły w kategoriach Najlepszy Film, Reżyser, Aktor, Aktorka i Scenariusz. Były to filmy \"Ich noce\" (1934), \"Lot nad kukułczym gniazdem (1975) oraz \"Milczenie owiec\" (1991).</string>
    <string name="zrodlo3">źródło: www.rp.pl</string>
    <string name="pytanie1">Obejrzyj powyższy film i zaznacz właściwą odpowiedź.</string>
    <string name="pytanie1_1">Który aktor, nagrodzony Oscarem za najlepszą rolę pierwszoplanową pojawił się na ekranie przez zaledwie 16 minut ?</string>
    <string name="pytanie2_1">Wysłuchaj piosenki i zaznacz właściwą odpowiedź.</string>
    <string name="pytanie2">Z jakiego filmu nominowanego w 2019 roku do nagrody za film nieanglojęzyczny pochodzi ten utwór?</string>
    <string name="pytanie3_1">Popatrz na powyższą animację i zaznacz prawidłową odpowiedź.</string>
    <string name="pytanie3">Który aktor prowadzi w rankingu na Najlepszego Aktora?</string>
    <string name="tests_button">Testy</string>
    <string name="jon_voight">Jon Voight</string>
    <string name="anthony_hopkins">Anthony Hopkins</string>
    <string name="christopher_plummer">Christopher Plummer</string>
    <string name="zimna_wojna">Zimna Wojna</string>
    <string name="ida">Ida</string>
    <string name="zimne_serca">Zimne serca</string>
    <string name="jack_nicholson">Jack Nicholson</string>
    <string name="al_pacino">Al Pacino</string>
</resources>
