<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test3">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Test3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="639dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/jack"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pytanie3_1"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="1dp"
            android:layout_gravity="center"

            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pytanie3"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="1dp"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/Test3_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/jack_nicholson" />

        <RadioButton
            android:id="@+id/radio2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/al_pacino" />

        <RadioButton
            android:id="@+id/radio3_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anthony_hopkins" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_test1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/les1" />

            <Button
                android:id="@+id/but_test2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/les2" />

            <Button
                android:id="@+id/but_test3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/les3" />

        </LinearLayout>

        <Button
            android:id="@+id/pub_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="70dp"
            android:background="@color/tests"
            android:gravity="center"
            android:text="PUBLIKACJA TESTÓW"
            android:textSize="10sp" />

    </LinearLayout>

    <Button
        android:id="@+id/home_button"
        android:alpha="0.8"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/home"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>